...
        backdropPath: '/d5iIlFn5s0ImszYzBPb8JPIfbXD.jpg',
        budget: 8_000_000,
        genres: [
          { id: 80, name: 'Crime' },
          { id: 53, name: 'Thriller' }
        ],
        originalTitle: 'Pulp Fiction',
        overview: 'The lives of two mob hitmen intertwine in Los Angeles.',
        posterPath: '/vQWk5YBFWF4bZaofAbv0tShwBvQ.jpg',
        releaseDate: '1994-09-10',
        revenue: 213_900_000,
        runtime: 154,
        tagline: 'Just because you are a character does not mean you have character.',
...
