appId: dev.noboil.movie
---
- launchApp
- assertVisible: "Movie Search"
- tapOn: "Search movies..."
- inputText: "Inception"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- tapOn:
    text: "Inception"
    index: 0
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- back
- waitForAnimationToEnd
- assertVisible: "Movie Search"
- assertVisible: "Inception"
- tapOn:
    text: "Inception"
    index: 0
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- back
- waitForAnimationToEnd
- assertVisible: "Movie Search"
