appId: dev.noboil.movie
---
- launchApp
- assertVisible: "Movie Search"
- tapOn: "Fetch"
- assertVisible: "Fetch by ID"
- tapOn: "Search"
- assertVisible: "Movie Search"
- tapOn: "Fetch"
- assertVisible: "Fetch by ID"
- tapOn: "Search"
- assertVisible: "Movie Search"
- tapOn: "Search movies..."
- inputText: "Fight Club"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Fight Club"
    timeout: 15000
- tapOn:
    text: "Fight Club"
    index: 0
- waitForAnimationToEnd
- assertVisible:
    text: "Loading..."
    optional: true
- extendedWaitUntil:
    notVisible:
      text: "Loading..."
    timeout: 15000
- extendedWaitUntil:
    visible: "Fight Club"
    timeout: 15000
- swipe:
    direction: UP
    duration: 500
- swipe:
    direction: UP
    duration: 500
- scrollUntilVisible:
    element: ".*Release.*|.*Rating.*|.*Runtime.*|.*overview.*|.*min.*"
    direction: DOWN
    timeout: 15000
- back
- waitForAnimationToEnd
- assertVisible: "Movie Search"
- assertVisible: "Fight Club"
- tapOn: "Fetch"
- assertVisible: "Fetch by ID"
- tapOn: "Search"
- assertVisible: "Movie Search"
- assertVisible: "Fight Club"
