appId: dev.noboil.movie
---
- launchApp
- assertVisible: "Movie Search"
- tapOn: "Search movies..."
- inputText: "Fight Club"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Fight Club"
    timeout: 15000
- tapOn:
    text: "Fight Club"
    index: 0
- waitForAnimationToEnd
- extendedWaitUntil:
    notVisible:
      text: "Loading..."
    timeout: 15000
- extendedWaitUntil:
    visible: "Fight Club"
    timeout: 15000
- scrollUntilVisible:
    element: ".*Release.*|.*Rating.*"
    direction: DOWN
    timeout: 10000
- back
- waitForAnimationToEnd
- assertVisible: "Movie Search"
- assertVisible: "Fight Club"
- tapOn: "Fight Club"
- eraseText: 50
- inputText: "Pulp Fiction"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Pulp Fiction"
    timeout: 15000
- tapOn:
    text: "Pulp Fiction"
    index: 0
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Pulp Fiction"
    timeout: 15000
- back
- waitForAnimationToEnd
- assertVisible: "Movie Search"
