appId: dev.noboil.movie
---
- launchApp
- assertVisible: "Movie Search"
- tapOn: "Search movies..."
- inputText: "Matrix"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Matrix"
    timeout: 15000
- assertVisible: "Matrix"
- tapOn: "Matrix"
- eraseText: 50
- inputText: "Inception"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Inception"
    timeout: 15000
- assertVisible: "Inception"
- tapOn: "Inception"
- eraseText: 50
- inputText: "Pulp Fiction"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Pulp Fiction"
    timeout: 15000
- assertVisible: "Pulp Fiction"
- tapOn: "Pulp Fiction"
- eraseText: 50
- inputText: "Dark Knight"
- tapOn:
    text: "magnifyingglass"
- extendedWaitUntil:
    visible: "Dark Knight"
    timeout: 15000
