appId: dev.noboil.mobile.convex.org
---
- launchApp
- assertVisible:
    id: "org-home-page"
- tapOn:
    id: "route-_wiki"
- assertVisible:
    id: "screen-page"
- assertVisible:
    id: "screen-page"
