appId: dev.noboil.mobile.convex.org
---
- launchApp
- assertVisible:
    id: "org-home-page"
- tapOn:
    id: "route-_dashboard"
- assertVisible:
    id: "screen-page"
- tapOn:
    id: "back-home"
- assertVisible:
    id: "org-home-page"
