appId: dev.noboil.mobile.stdb.org
---
- launchApp
- assertVisible:
    id: "org-home-page"
- tapOn:
    id: "route-_onboarding"
- assertVisible:
    id: "screen-page"
- tapOn:
    id: "back-home"
- assertVisible:
    id: "org-home-page"
