appId: dev.noboil.mobile.stdb.org
---
- launchApp
- assertVisible:
    id: "org-home-page"
- tapOn:
    id: "route-_members"
- assertVisible:
    id: "screen-page"
- assertVisible:
    id: "screen-page"
